--- a/src/components/App.css
+++ b/src/components/App.css
@@ -3,7 +3,7 @@
 .token {
   height: 150px;
   width: 150px;
-  background-color: pink;
+  background-color: rgb(192, 224, 245);
   border-radius: 50%;
   display: inline-block;
 }
